rubocop/examples/good/Style_SpaceAfterSemicolon.rb
# TODO: Checks for semicolon (;) not followed by some kind of space.

# good
sum = 1 + 2
a, b = 1, 2
[1, 2, 3].each { |e| puts e }
class FooError < StandardError; end
