rubocop/examples/bad/Style_SpaceAfterSemicolon.rb
# TODO: Checks for semicolon (;) not followed by some kind of space.
